--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,34 +1,16 @@
-  <%- include('partials/header'); -%>
-  <title>Login | ishandeveloper</title>
-  </head>
+<%- include('partials/header') %>
 
-  <body style="overflow: hidden;">
-      <div class="row" style="height:100vh;">
-          <div id="right-section" class="col">
 
-              <div id="login-area">
-                  <h2>
-                      Let's <small class="text-muted">Login</small>
-                  </h2>
-               
-                  <input class="box" type="text" placeholder="Email or Username">
-                  <input class="box" type="password" placeholder="Password">
-                  <div id="buttons">
-                      <button class="login-btn">Login</button>
-                      <button class="login-btn" id="google-vaala-button" style="width:250px!important;">
-                          <div class="google-icon-wrapper">
-                              <img class="google-icon"
-                                  src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
-                          </div>
-                          Sign in with Google
-                      </button>
-                  </div>
+<div class="jumbotron centered">
+    <div class="container">
+        <i class="fas fa-key fa-6x"></i>
+        <h1 class="display-3">Secrets</h1>
+        <p class="lead">Don't keep your secrets, share them anonymously!</p>
+        <hr>
+        <a class="btn btn-light btn-lg" href="/signup" role="button">Signup</a>
+        <a class="btn btn-dark btn-lg" href="/login" role="button">Login</a>
 
-              </div>
-              <div id="login-footer">
-                  <i>Made with <font color="red">♥</font> by <a href="http://ishandeveloper.com">ishandeveloper </a></i>
-              </div>
-          </div>
-      </div>
+    </div>
+</div>
 
-      <%- include('partials/footer'); -%>
+<%- include('partials/footer') %>
