--- a/Lvl 6. oAuth/views/login.ejs
+++ b/Lvl 6. oAuth/views/login.ejs
@@ -11,20 +11,23 @@
                       Let's <small class="text-muted">Login</small>
                   </h2>
                   <form action="/login" method="POST">
-                  <input class="box" type="text" name="username" placeholder="Email or Username">
-                  <input class="box" type="password" name="password" placeholder="Password">
-                  <div id="buttons">
-                      <button type="submit" class="login-btn">Login</button>
-                      <button class="login-btn" id="google-vaala-button" style="width:250px!important;">
-                          <div class="google-icon-wrapper">
-                              <img class="google-icon"
-                                  src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
-                          </div>
-                          Sign in with Google
-                      </button>
-                      <br><a style="font-size: 0.9em;" href="/signup">Don't have an account yet? Let`s Create One.</a>
-                  </div>
-                </form>
+                      <input class="box" type="text" name="username" placeholder="Email or Username">
+                      <input class="box" type="password" name="password" placeholder="Password">
+                      <div id="buttons">
+                          <button type="submit" class="login-btn">Login</button>
+                          <a href="/auth/google">
+                              <button class="login-btn" id="google-vaala-button" style="width:250px!important;">
+                                  <div class="google-icon-wrapper">
+                                      <img class="google-icon"
+                                          src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
+                                  </div>
+                                  Sign in with Google
+                              </button>
+                          </a>
+                          <br><a style="font-size: 0.9em;" href="/signup">Don't have an account yet? Let`s Create
+                              One.</a>
+                      </div>
+                  </form>
               </div>
               <div id="login-footer">
                   <i>Made with <font color="red">♥</font> by <a href="http://ishandeveloper.com">ishandeveloper </a></i>
