--- a/Lvl 6. oAuth/views/signup.ejs
+++ b/Lvl 6. oAuth/views/signup.ejs
@@ -15,13 +15,15 @@
                       <input class="box" type="password" name="password" placeholder="Password">
                       <div id="buttons">
                           <button type="submit" class="login-btn">Signup</button>
-                          <button class="login-btn" id="google-vaala-button" style="width:250px!important;">
-                              <div class="google-icon-wrapper">
-                                  <img class="google-icon"
-                                      src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
-                              </div>
-                              Sign up with Google
-                          </button>
+                          <a href="/auth/google/">
+                              <button class="login-btn" id="google-vaala-button" style="width:250px!important;">
+                                  <div class="google-icon-wrapper">
+                                      <img class="google-icon"
+                                          src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg" />
+                                  </div>
+                                  Sign up with Google
+                              </button>
+                          </a>
                           <br><a style="font-size: 0.9em;" href="/login">Already have an account yet? Sign in.</a>
                       </div>
                   </form>
